--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,7 @@
 body {
     background: #0f1516;
     font-family: 'JetBrains Mono', monospace;
-}
-
-@media (max-width: 33.9em) {
-    body {
-        font-size: 0.8em;
-    }
+    font-size: x-large;
 }
 
 .bg-gradient {
